# receivers

./: .gitignore  .interrogate-epos-dissemination.md  CLAUDE.md  DEVELOPMENT_RULES.md  DOWNLOAD_FLOW.md  LICENSE  NATT_DEPLOYMENT.md  README.md  RECEIVER_ARCHITECTURE.md  REFACTORING_PLAN.md  analyze_performance_data.sh  check_concurrent.sh  check_downloads.sh  collect_performance_data.sh  download_natt_stations.py  download_natt_stations_py34.py  extract_health_bin2asc.py  monitor_concurrent.sh  monitor_downloads.sh  monitoring_status.sh  pyproject.toml
.github/workflows/: basic-ci.yml
config/: station_areas.yaml
config/defaults/: receivers.cfg  scheduler.yaml  station_areas.yaml  sync.yaml
deployment/: README.md
deployment/docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install.sh
deployment/docker-dev/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  entrypoint.sh.bak  install.sh
deployment/docker-prod/: README.md
deployment/docs/: DEPLOYMENT_GUIDE.md  MONITORING_GUIDE.md
deployment/logrotate.d/: gps-receivers
deployment/scripts/: check_gps_scheduler.sh  fix_gzip_z_to_lzw.sh  install.sh  migrate_rinex_d_to_D.sh  migrate_rinex_d_to_D.sql  morning_recovery_report.sh
deployment/server/: .env.example  DEV_SERVER_SETUP.md  README.md  docker-compose.yml  install.sh  sync-config.sh
deployment/systemd/: gps-archive-sync-alert.service  gps-archive-sync-alert.timer  gps-config-sync.service  gps-config-sync.timer  gps-host-monitor.service  gps-host-monitor.timer  gps-morning-recovery-report.service  gps-morning-recovery-report.timer  gps-receivers-scheduler.service
deployment/test/: Dockerfile.test  README.md  run-scheduler-docker.sh  run-scheduler-simple.sh  test-install.sh
dev/: README.md
docs/: CODE_REVIEW_2026-05-09.md  CODE_REVIEW_TRACKER.md  DEVELOPMENT_ROADMAP.md  FLEXIBLE_SCHEDULING.md  LOG_QUALITY.md  RECEIVER_IMPLEMENTATION.md  gtimes_contribution_todo.md  health_monitoring.md  health_timeseries_schema.md  manual_testing_guide.md  phase1_implementation.md  phase1b_testing.md  phase2_complete.md  phase3c_complete.md  production-roadmap.md  receiver_naming_standardization.md  tools-installation.md  utilities_usage_guide.md
docs/architecture/: config-data-flow.md  epos-dissemination-plan.md  epos-gnss-port-analysis.md  epos-observer-agency-and-sitelog.md  metadata-extraction-deterministic-verbs.md  station-onboarding.md  unified-file-index-plan.md
docs/archived/: FIXES_SUMMARY.md  applying_fixes_to_all_receivers.md  base_download_manager_enhancements.md  download_managers_created.md  health_implementation_complete.md  phase1_complete.md  (+6 more)
examples/: README.md  thresholds.yaml
migrations/: 000_consolidated_schema.sql  001_block_aligned_schema.sql  001_block_aligned_schema_rollback.sql  002_file_tracking.sql  002_file_tracking_rollback.sql  003_satellite_tracking.sql  003_satellite_tracking_rollback.sql  004_health_summary_ports.sql  004_health_summary_ports_rollback.sql  005_widen_fix_type.sql  005_widen_fix_type_rollback.sql  006_health_summary_details.sql  006_health_summary_details_rollback.sql  007_stations_power_type.sql  007_stations_power_type_rollback.sql  008_station_areas.sql  009_ping_status.sql  009_ping_status_rollback.sql  010_port_status.sql  011_fix_views_and_thresholds.sql  011_fix_views_and_thresholds_rollback.sql  012_station_dashboard_view.sql  012_station_dashboard_view_rollback.sql  013_receiver_identity.sql  013_receiver_identity_rollback.sql  014_logging_status.sql  015_health_check_status.sql  016_backfill_progress.sql  017_backfill_multi_session.sql  018_data_flow_status.sql  019_station_name.sql  020_port_debounce.sql  021_archive_format.sql  021_archive_format_rollback.sql  022_station_owner.sql  023_connection_state.sql  024_data_flow_no_dir.sql  025_file_integrity.sql  026_download_performance.sql  027_staleness_guards.sql  (+59 more)
monitoring/: README.md  start_monitoring.sh  watch_downloads.sh
rek_scripts/: .conv1Hzrinto15s.sh.swm  .conv1Hzrinto15s.sh.swn  .getSeptentrio3.swj  .getSeptentrio3.swk  .getSeptentrio3.swl  .getSeptentrio3.swn  1  IPlist.txt  archive_leica-rinex.sh  functions.py  get-raspb-shake-gifs1.sh  get-raspb-shake-gifs2.sh  getLeica  getSeptentrio2-fix  get_ip_ab.sh  getbjtv.sh  getgusk.sh  gps2influx.py  gpslog.sh  isgpslog  mall_netr9_1hz_t02.sh  mall_netr9_t02-local.sh  mall_septentrio.sh  mall_topcon_15s-old_data.sh  nohup.out  pandas_test.py  runpkr00.5_18  sbf2rin.old  sbf2standard.sh  seydisfjordur-extentionmeter-acquisition.sh  sync-entc.py  syncDYNG2DYNA  syncHRAC2HRNC  sync_and_rinex_1Hz_data  sync_lmi-15s_data_new.sh  syncdata  syncdata_v1  test_cparser.py  thjap  tmp_sync_1hrfiles.sh  (+4 more)
scripts/: aggregator_demo.py  db_manage.sh  grafana_sync.py  grafana_targets.yaml  import_historical_json.py  lint-sql-joins.py  parse_teqc_configs.py  plot_voltage.py  push_receiver_config.py  repair_4100442_fw_sw_history.py  sync_areas_to_db.py  sync_stations_to_db.py  test_health_extraction.py  tos_auth_repro.sh  update_station_coordinates.py
sql/: archive_catalog_sha256.sql  health_views.sql  latency_report.sql
tests/: README_TESTING.md  test_add_antenna.py  test_add_monument.py  test_add_station.py  test_archive_audit.py  test_archive_index_backfill.py  test_archive_prune.py  test_archive_reindex.py  test_archive_remove.py  test_archive_sort.py  test_archive_sync.py  test_archive_sync_check.py  test_archive_validator.py  test_archive_verify.py  test_area_config.py  test_arguments.py  test_ashtech_converter.py  test_async_rinex.py  test_backup_old.py  test_batch_parallel.py  test_build_path.py  test_canonical_key.py  test_catalog_fanout.py  test_cfg_discrepancy_log.py  test_cfg_global_flag.py  test_cfg_operations.py  test_cfg_reconciler.py  test_cfg_sync_from_tos.py  test_cli_add_receiver.py  test_cli_update_device.py  test_compression_detector.py  test_config_utils.py  test_connection_checker.py  test_connectivity_writer.py  test_conntrack_helper.py  test_content_hash.py  test_correct_date.py  test_database_factory.py  test_date_vocab.py  test_device_probe.py  (+79 more)
tools/: .gitignore
(+665 files in other folders)
