[project]
name = "receivers"
version = "0.1.0"
description = "GPS/GNSS receiver management and data download toolkit for Veðurstofa Íslands"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
    { name = "Fjalar Sigurdsson", email = "fjalar@vedur.is" },
]
maintainers = [
    { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }
]
keywords = [
    "gps", "gnss", "receivers", "septentrio", "polarx5", "data-download", 
    "station-health", "ftp", "rinex", "geodesy", "geophysics",
    "vedurstofan", "iceland", "met-office"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Environment :: Console",
    "Natural Language :: English",
]
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0",
    "pathlib2>=2.3.7; python_version<'3.4'",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    "paramiko>=3.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "gtimes @ git+https://github.com/bennigo/gtimes@v0.5.1",
    "tostools @ git+https://github.com/bennigo/tostools@adaa495",
    "gps-parser @ git+https://github.com/bennigo/gps_parser@93c8ab6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0", 
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
local = [
    "gtimes>=0.4.0",  # Local package - install separately
    # "gps_parser",   # Local package - install separately
]
scheduler = [
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",  # For scheduler stop/restart commands
]
all = [
    "receivers[dev,test,docs,local,scheduler]",
]

[project.urls]
Homepage = "https://github.com/vedur-is/receivers"
Repository = "https://github.com/vedur-is/receivers"
Issues = "https://github.com/vedur-is/receivers/issues"
Documentation = "https://vedur-is.github.io/receivers"

[project.scripts]
receivers = "receivers.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/receivers"]

# Dev-only sibling overrides: when these paths exist locally, `uv sync`
# installs them as editable instead of pulling the git+https pins above.
# [tool.uv.sources] is ignored by built wheels and by consumers without
# local sibling checkouts, so production deploys still resolve git+https.
# Avoids the symlink-vs-git+https collision that wiped tostools/src/
# during a `uv lock` on 2026-05-24 (the venv had a manually-created
# editable symlink that uv unlinked along with its target).
[tool.uv.sources]
gtimes = { path = "../gtimes", editable = true }
tostools = { path = "../tostools", editable = true }
gps-parser = { path = "../gps_parser", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "N803",  # argument name should be lowercase (GPS functions use camelCase)
    "N806",  # variable in function should be lowercase (legacy GPS code)
    "B904",  # Within except clause, raise exceptions with raise ... from err
    "F401",  # imported but unused (needed for conditional imports)
    "E402",  # module-level import not at top of file (intentional lazy imports for optional deps)
    "E722",  # bare except (pragmatic in legacy receiver code)
    "E741",  # ambiguous variable name (single-letter math/physics variables are idiomatic)
    "N814",  # CamelCase imported as constant (backward-compat re-exports)
    "B007",  # unused loop control variable (often intentional)
    "B017",  # assert-raises exception (tests assert broad exception intentionally)
    "B023",  # function uses loop variable (legacy pattern)
    "UP006", # non-pep585 annotation (List/Dict/Tuple — mixed with py585 `list[...]` in codebase)
    "UP007", # non-pep604 union annotation (Optional/Union — style preference)
    "UP035", # deprecated import (typing.List/Dict/Tuple not deprecated on py3.9)
    "UP045", # non-pep604 Optional annotation (Optional[X] vs X | None — style preference)
    "B905",  # zip without explicit strict= (legacy pattern, safe when lengths are pre-validated)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N802", "N803"]  # Allow uppercase in test names

[tool.bandit]
# False positives / out-of-scope for this codebase:
# - FTP is the required protocol for GPS receivers
# - URLs are always internal (receiver IPs, internal config endpoints)
# - tarfile archives come from receivers we control
# - SQL is parameterised through SQLAlchemy wrappers
# - XML is parsed from receiver responses we control
# - tmp paths are sanitized by callers
skips = [
    "B108",  # hardcoded_tmp_directory
    "B202",  # tarfile_unsafe_members (archives come from controlled sources)
    "B310",  # urllib.request.urlopen (URLs are internal only)
    "B314",  # xml.etree.ElementTree (untrusted-XML not in threat model)
    "B321",  # FTP-related function calls
    "B402",  # FTP-related module imports
    "B608",  # hardcoded_sql_expressions (all SQL is parameterised)
]

[tool.black]
line-length = 88
target-version = ['py312', 'py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "progressbar2.*",
    "gps_parser.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "-ra",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests with receivers",
    "ftp: Tests requiring FTP connections",
    "slow: Slow tests that may take time",
    "septentrio: Septentrio-specific tests",
    "polarx5: PolaRX5 receiver tests",
    "scheduler: Scheduler-related tests",
    "concurrent: Tests for concurrent operations",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2